# easydev_site

./: docker-compose.prod.yaml  docker-compose.yaml
backend/: celery.dockerfile  celery_start.sh  pyproject.toml
backend/apps/amenities/: admin.py  apps.py  models.py
backend/apps/amenities/api/: urls.py
backend/apps/amenities/migrations/: 0001_initial.py  0002_amenities_gif_amenities_video_alter_amenities_photo.py  0003_amenities_text_and_label_color_skill_technology_and_more.py  0004_amenities_link.py  0005_mostpopularquestion.py
backend/apps/feedback/: admin.py  apps.py  models.py  signals.py  tasks.py
backend/apps/feedback/api/: urls.py
backend/apps/feedback/migrations/: 0001_initial.py  0002_alter_feedback_file.py  0002_alter_feedback_options.py  0003_alter_feedback_options.py
backend/apps/news/: admin.py  models.py
backend/apps/news/api/: urls.py
backend/apps/news/migrations/: 0001_initial.py  0002_alter_blockofnews_news.py  0003_alter_blockofnews_options_alter_image_options_and_more.py  0004_delete_image.py
backend/apps/portfolio/: admin.py  models.py
backend/apps/portfolio/api/: urls.py
backend/apps/portfolio/migrations/: 0001_initial.py  0002_alter_portfolio_options.py  0003_alter_portfolio_name.py  0004_remove_portfolio_gif_remove_portfolio_is_active_and_more.py  (+1 more)
backend/apps/service/: admin.py  models.py
backend/apps/site_settings/: admin.py  models.py
backend/apps/utils/: admin.py
backend/apps/vacancies/: admin.py  models.py
backend/apps/vacancy/: admin.py  models.py
backend/config/: settings.py  urls.py
frontend/src/: App.js  (+1 more)
(+148 files in other folders)
